--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -134,6 +134,12 @@
   display: none;
 }
 
+.cliqz-ac-image {
+  width: 105px;
+  height: 48px;
+  padding-left: 20px;
+}
+
 /* general autocomplete item styles */
 .ac-title-box {
   height: 24px;
