--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -16,7 +16,7 @@
 }
 
 .autocomplete-richlistitem:hover {
-  background-color: azure;
+  background-color: #azure;
 }
 
 .button-cliqz {
@@ -36,7 +36,7 @@
 
 /* autocomplete popup container */
 #PopupAutoCompleteRichResult {
-  height: 135px !important;
+  height: 155px !important;
 }
 
 /* progress bar */
@@ -56,28 +56,28 @@
 .autocomplete-richlistitem[type="favicon"] .ac-title-box, 
 .autocomplete-richlistitem[type="bookmark"] .ac-title-box,
 .autocomplete-richlistitem[type="switchtab"] .ac-title-box {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 10pt;
-  /* font-weight: bold; */
+  font-weight: medium;
   color: #663366;
 }
 
 .autocomplete-richlistitem[type="cliqz-results"] .ac-title-box {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 10pt;
-  /* font-weight: bold; */
-  color: #333333;
+  font-weight: medium; 
+  color: #003366;
 }
 
 /* source color */
 .cliqz-ac-source-icon {
   width: 10px;
   height: 52px;
-  border-left: 4px solid;
+  border-left: 5px solid;
 }
 
 .autocomplete-richlistitem[type="cliqz-results"] .cliqz-ac-source-icon {
-  border-color: green;
+  border-color: #cccccc;
 }
 
 .autocomplete-richlistitem[type="cliqz-suggestions"] .cliqz-ac-source-icon {
@@ -86,11 +86,11 @@
 
 /* history */
 .autocomplete-richlistitem[type="favicon"] .cliqz-ac-source-icon {
-  border-color: blue;
+  border-color: #996699;
 }
 
 .autocomplete-richlistitem[type="bookmark"] .cliqz-ac-source-icon {
-  border-color: purple;
+  border-color: #ffcc33;
 }
 
 .cliqz-ac-logo-icon {
@@ -125,7 +125,7 @@
 .cliqz-ac-url-host {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 9pt;
-  color: #000000;
+  color: #333333;
 }
 
 .cliqz-ac-url-path {
@@ -139,16 +139,18 @@
 }
 
 .cliqz-urlbar-message-search {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   color: white;
-  background-color: green;
+  background-color: #336699;
   margin: 1px;
   padding: 1px 5px;
   border-radius: 1px;
 }
 
 .cliqz-urlbar-message-navigate {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   color: white;
-  background-color: blue;
+  background-color: #33cc99; 
   margin: 1px;
   padding: 1px 5px;
   border-radius: 1px;
