--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -217,10 +217,9 @@
 }
 
 .ac-emphasize-text  {
-  color: green;
   background-color: transparent;
   box-shadow: none;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 10pt;
   /* font-weight: bold; */
   color: #669999;
