--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -20,7 +20,7 @@
 }
 
 .cliqz-ac-site-icon-ssl {
-  background: url(chrome://cliqzres/content/skin/lock_light.jpg) no-repeat center 25%;
+  background: url(chrome://cliqzres/content/skin/lock_light.jpg) no-repeat center 70%;
 }
 
 .cliqz-left-separator {
@@ -76,7 +76,7 @@
   font-size: 10pt;
   font-weight: 400;
   color: #996699;
-  padding: 5px 0;
+  padding: 10px 0 5px 0;
 }
 
 .autocomplete-richlistitem[type="cliqz-results"] .ac-title-box {
@@ -84,7 +84,7 @@
   font-size: 10pt;
   font-weight: 400; 
   color: #003366;
-  padding: 5px 0;
+  padding: 10px 0 5px 0;
 }
 
 /* source color */
@@ -149,7 +149,7 @@
 */
 
 .autocomplete-richlistitem:hover {
-  border-color: #ffcc33;
+  border-color: #33cc99;
   /*background-color: lightgray;*/
 }
 
@@ -158,7 +158,7 @@
   height: 48px;
   background-repeat: no-repeat;
   background-position: left center;
-  margin-top: 2px;
+  margin-top: 7px;
 }
 
 .cliqz-history {
