make popup smaller if there are less than 3 results

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -48,7 +48,7 @@
 
 /* autocomplete popup container */
 #PopupAutoCompleteRichResult {
-  height: 150px !important;
+  max-height: 150px;
 }
 
 .ac-type-icon {
