--- a/cliqz@cliqz.com/chrome/skin/logo.css
+++ b/cliqz@cliqz.com/chrome/skin/logo.css
@@ -1075,3 +1075,381 @@
 .logo-zeit-de {
 	background-image: url(http://beta.cliqz.com/logo/zeit.de.png);
 }
+.logo-ab-in-den-urlaub-de {
+	background-image: url(http://beta.cliqz.com/logo/ab-in-den-urlaub.de.png);
+}
+.logo-adidas-de {
+	background-image: url(http://beta.cliqz.com/logo/adidas.de.png);
+}
+.logo-affili-net {
+	background-image: url(http://beta.cliqz.com/logo/affili.net.png);
+}
+.logo-amazonaws-com {
+	background-image: url(http://beta.cliqz.com/logo/amazonaws.com.png);
+}
+.logo-amica-de {
+	background-image: url(http://beta.cliqz.com/logo/amica.de.png);
+}
+.logo-android-hilfe-de {
+	background-image: url(http://beta.cliqz.com/logo/android-hilfe.de.png);
+}
+.logo-angela-merkel-de {
+	background-image: url(http://beta.cliqz.com/logo/angela-merkel.de.png);
+}
+.logo-arbeitsagentur-de {
+	background-image: url(http://beta.cliqz.com/logo/arbeitsagentur.de.png);
+}
+.logo-archive-org {
+	background-image: url(http://beta.cliqz.com/logo/archive.org.png);
+}
+.logo-arcor-de {
+	background-image: url(http://beta.cliqz.com/logo/arcor.de.png);
+}
+.logo-ard-de {
+	background-image: url(http://beta.cliqz.com/logo/ard.de.png);
+}
+.logo-ardmediathek-de {
+	background-image: url(http://beta.cliqz.com/logo/ardmediathek.de.png);
+}
+.logo-augsburger-allgemeine-de {
+	background-image: url(http://beta.cliqz.com/logo/augsburger-allgemeine.de.png);
+}
+.logo-avm-de {
+	background-image: url(http://beta.cliqz.com/logo/avm.de.png);
+}
+.logo-axelspringer-de {
+	background-image: url(http://beta.cliqz.com/logo/axelspringer.de.png);
+}
+.logo-basecamp {
+	background-image: url(http://beta.cliqz.com/logo/basecamp.png);
+}
+.logo-battle-net {
+	background-image: url(http://beta.cliqz.com/logo/battle.net.png);
+}
+.logo-battlefield-com {
+	background-image: url(http://beta.cliqz.com/logo/battlefield.com.png);
+}
+.logo-bbc.co-uk {
+	background-image: url(http://beta.cliqz.com/logo/bbc.co.uk.png);
+}
+.logo-bertelsmann-de {
+	background-image: url(http://beta.cliqz.com/logo/bertelsmann.de.png);
+}
+.logo-blog-de {
+	background-image: url(http://beta.cliqz.com/logo/blog.de.png);
+}
+.logo-bmjv-de {
+	background-image: url(http://beta.cliqz.com/logo/bmjv.de.png);
+}
+.logo-bmw-de {
+	background-image: url(http://beta.cliqz.com/logo/bmw.de.png);
+}
+.logo-br-de {
+	background-image: url(http://beta.cliqz.com/logo/br.de.png);
+}
+.logo-bundesregierung-de {
+	background-image: url(http://beta.cliqz.com/logo/bundesregierung.de.png);
+}
+.logo-burdadirektservices-de {
+	background-image: url(http://beta.cliqz.com/logo/burdadirektservices.de.png);
+}
+.logo-cdu-de {
+	background-image: url(http://beta.cliqz.com/logo/cdu.de.png);
+}
+.logo-cellular-de {
+	background-image: url(http://beta.cliqz.com/logo/cellular.de.png);
+}
+.logo-cinema-de {
+	background-image: url(http://beta.cliqz.com/logo/cinema.de.png);
+}
+.logo-cliqz-com {
+	background-image: url(http://beta.cliqz.com/logo/cliqz.com.png);
+}
+.logo-computeruniverse-net {
+	background-image: url(http://beta.cliqz.com/logo/computeruniverse.net.png);
+}
+.logo-conrad-de {
+	background-image: url(http://beta.cliqz.com/logo/conrad.de.png);
+}
+.logo-csu-de {
+	background-image: url(http://beta.cliqz.com/logo/csu.de.png);
+}
+.logo-cyberport-de {
+	background-image: url(http://beta.cliqz.com/logo/cyberport.de.png);
+}
+.logo-dailymail.co-uk {
+	background-image: url(http://beta.cliqz.com/logo/dailymail.co.uk.png);
+}
+.logo-daskochrezept-de {
+	background-image: url(http://beta.cliqz.com/logo/daskochrezept.de.png);
+}
+.logo-dawanda-com {
+	background-image: url(http://beta.cliqz.com/logo/dawanda.com.png);
+}
+.logo-dbk-de {
+	background-image: url(http://beta.cliqz.com/logo/dbk.de.png);
+}
+.logo-dejure-org {
+	background-image: url(http://beta.cliqz.com/logo/dejure.org.png);
+}
+.logo-denic-de {
+	background-image: url(http://beta.cliqz.com/logo/denic.de.png);
+}
+.logo-derwesten-de {
+	background-image: url(http://beta.cliqz.com/logo/derwesten.de.png);
+}
+.logo-deutschland-de {
+	background-image: url(http://beta.cliqz.com/logo/deutschland.de.png);
+}
+.logo-df-eu {
+	background-image: url(http://beta.cliqz.com/logo/df.eu.png);
+}
+.logo-dict-cc {
+	background-image: url(http://beta.cliqz.com/logo/dict.cc.png);
+}
+.logo-die-linke-de {
+	background-image: url(http://beta.cliqz.com/logo/die-linke.de.png);
+}
+.logo-dld-conference-de {
+	background-image: url(http://beta.cliqz.com/logo/dld-conference.de.png);
+}
+.logo-doodle-com {
+	background-image: url(http://beta.cliqz.com/logo/doodle.com.png);
+}
+.logo-elitepartner-de {
+	background-image: url(http://beta.cliqz.com/logo/elitepartner.de.png);
+}
+.logo-elle-de {
+	background-image: url(http://beta.cliqz.com/logo/elle.de.png);
+}
+.logo-fahrinfo-berlin-de {
+	background-image: url(http://beta.cliqz.com/logo/fahrinfo-berlin.de.png);
+}
+.logo-fcbayern-de {
+	background-image: url(http://beta.cliqz.com/logo/fcbayern.de.png);
+}
+.logo-fcbayern.telekom-de {
+	background-image: url(http://beta.cliqz.com/logo/fcbayern.telekom.de.png);
+}
+.logo-fck-de {
+	background-image: url(http://beta.cliqz.com/logo/fck.de.png);
+}
+.logo-fdp-de {
+	background-image: url(http://beta.cliqz.com/logo/fdp.de.png);
+}
+.logo-finanzen100-de {
+	background-image: url(http://beta.cliqz.com/logo/finanzen100.de.png);
+}
+.logo-fitforfun-de {
+	background-image: url(http://beta.cliqz.com/logo/fitforfun.de.png);
+}
+.logo-flashx-tv {
+	background-image: url(http://beta.cliqz.com/logo/flashx.tv.png);
+}
+.logo-flickr-com {
+	background-image: url(http://beta.cliqz.com/logo/flickr.com.png);
+}
+.logo-freundin-de {
+	background-image: url(http://beta.cliqz.com/logo/freundin.de.png);
+}
+.logo-gesetze-im-internet-de {
+	background-image: url(http://beta.cliqz.com/logo/gesetze-im-internet.de.png);
+}
+.logo-gruene-de {
+	background-image: url(http://beta.cliqz.com/logo/gruene.de.png);
+}
+.logo-gucci-com {
+	background-image: url(http://beta.cliqz.com/logo/gucci.com.png);
+}
+.logo-gulli-com {
+	background-image: url(http://beta.cliqz.com/logo/gulli.com.png);
+}
+.logo-heftig-co {
+	background-image: url(http://beta.cliqz.com/logo/heftig.co.png);
+}
+.logo-hermes-com {
+	background-image: url(http://beta.cliqz.com/logo/hermes.com.png);
+}
+.logo-hm-com {
+	background-image: url(http://beta.cliqz.com/logo/hm.com.png);
+}
+.logo-hsv-de {
+	background-image: url(http://beta.cliqz.com/logo/hsv.de.png);
+}
+.logo-hubert-burda-media-de {
+	background-image: url(http://beta.cliqz.com/logo/hubert-burda-media.de.png);
+}
+.logo-iminent-com {
+	background-image: url(http://beta.cliqz.com/logo/iminent.com.png);
+}
+.logo-intraship-de {
+	background-image: url(http://beta.cliqz.com/logo/intraship.de.png);
+}
+.logo-jimdo-com {
+	background-image: url(http://beta.cliqz.com/logo/jimdo.com.png);
+}
+.logo-juris-de {
+	background-image: url(http://beta.cliqz.com/logo/juris.de.png);
+}
+.logo-kasserver-com {
+	background-image: url(http://beta.cliqz.com/logo/kasserver.com.png);
+}
+.logo-klicktel-de {
+	background-image: url(http://beta.cliqz.com/logo/klicktel.de.png);
+}
+.logo-kopp-verlag-de {
+	background-image: url(http://beta.cliqz.com/logo/kopp-verlag.de.png);
+}
+.logo-leo-org {
+	background-image: url(http://beta.cliqz.com/logo/leo.org.png);
+}
+.logo-magentocommerce-com {
+	background-image: url(http://beta.cliqz.com/logo/magentocommerce.com.png);
+}
+.logo-max-de {
+	background-image: url(http://beta.cliqz.com/logo/max.de.png);
+}
+.logo-mercedes-benz-de {
+	background-image: url(http://beta.cliqz.com/logo/mercedes-benz.de.png);
+}
+.logo-mietwagencheck-de {
+	background-image: url(http://beta.cliqz.com/logo/mietwagencheck.de.png);
+}
+.logo-muenchen-de {
+	background-image: url(http://beta.cliqz.com/logo/muenchen.de.png);
+}
+.logo-munich-airport-de {
+	background-image: url(http://beta.cliqz.com/logo/munich-airport.de.png);
+}
+.logo-mvg-mobil-de {
+	background-image: url(http://beta.cliqz.com/logo/mvg-mobil.de.png);
+}
+.logo-mysearchdial-com {
+	background-image: url(http://beta.cliqz.com/logo/mysearchdial.com.png);
+}
+.logo-netmoms-de {
+	background-image: url(http://beta.cliqz.com/logo/netmoms.de.png);
+}
+.logo-nsa-gov {
+	background-image: url(http://beta.cliqz.com/logo/nsa.gov.png);
+}
+.logo-o2online-de {
+	background-image: url(http://beta.cliqz.com/logo/o2online.de.png);
+}
+.logo-opodo.co-uk {
+	background-image: url(http://beta.cliqz.com/logo/opodo.co.uk.png);
+}
+.logo-organize-me {
+	background-image: url(http://beta.cliqz.com/logo/organize.me.png);
+}
+.logo-paketplus-de {
+	background-image: url(http://beta.cliqz.com/logo/paketplus.de.png);
+}
+.logo-payback-de {
+	background-image: url(http://beta.cliqz.com/logo/payback.de.png);
+}
+.logo-pearl-de {
+	background-image: url(http://beta.cliqz.com/logo/pearl.de.png);
+}
+.logo-playboy-de {
+	background-image: url(http://beta.cliqz.com/logo/playboy.de.png);
+}
+.logo-porsche-com {
+	background-image: url(http://beta.cliqz.com/logo/porsche.com.png);
+}
+.logo-prada-com {
+	background-image: url(http://beta.cliqz.com/logo/prada.com.png);
+}
+.logo-presseportal-de {
+	background-image: url(http://beta.cliqz.com/logo/presseportal.de.png);
+}
+.logo-puma-de {
+	background-image: url(http://beta.cliqz.com/logo/puma.de.png);
+}
+.logo-radiogong-de {
+	background-image: url(http://beta.cliqz.com/logo/radiogong.de.png);
+}
+.logo-schlossbensberg-com {
+	background-image: url(http://beta.cliqz.com/logo/schlossbensberg.com.png);
+}
+.logo-singleguide24-com {
+	background-image: url(http://beta.cliqz.com/logo/singleguide24.com.png);
+}
+.logo-siteadvisor-com {
+	background-image: url(http://beta.cliqz.com/logo/siteadvisor.com.png);
+}
+.logo-snapdo-com {
+	background-image: url(http://beta.cliqz.com/logo/snapdo.com.png);
+}
+.logo-spd-de {
+	background-image: url(http://beta.cliqz.com/logo/spd.de.png);
+}
+.logo-stargames-at {
+	background-image: url(http://beta.cliqz.com/logo/stargames.at.png);
+}
+.logo-steampowered-com {
+	background-image: url(http://beta.cliqz.com/logo/steampowered.com.png);
+}
+.logo-systweak-com {
+	background-image: url(http://beta.cliqz.com/logo/systweak.com.png);
+}
+.logo-t-co {
+	background-image: url(http://beta.cliqz.com/logo/t.co.png);
+}
+.logo-tantris-de {
+	background-image: url(http://beta.cliqz.com/logo/tantris.de.png);
+}
+.logo-test-de {
+	background-image: url(http://beta.cliqz.com/logo/test.de.png);
+}
+.logo-tomorrow-focus-media-de {
+	background-image: url(http://beta.cliqz.com/logo/tomorrow-focus-media.de.png);
+}
+.logo-tomorrow-focus-de {
+	background-image: url(http://beta.cliqz.com/logo/tomorrow-focus.de.png);
+}
+.logo-top-de {
+	background-image: url(http://beta.cliqz.com/logo/top.de.png);
+}
+.logo-tradedoubler-com {
+	background-image: url(http://beta.cliqz.com/logo/tradedoubler.com.png);
+}
+.logo-transfermarkt-de {
+	background-image: url(http://beta.cliqz.com/logo/transfermarkt.de.png);
+}
+.logo-traube-tonbach-de {
+	background-image: url(http://beta.cliqz.com/logo/traube-tonbach.de.png);
+}
+.logo-tvtoday-de {
+	background-image: url(http://beta.cliqz.com/logo/tvtoday.de.png);
+}
+.logo-urlm-de {
+	background-image: url(http://beta.cliqz.com/logo/urlm.de.png);
+}
+.logo-utrace-de {
+	background-image: url(http://beta.cliqz.com/logo/utrace.de.png);
+}
+.logo-valentins-de {
+	background-image: url(http://beta.cliqz.com/logo/valentins.de.png);
+}
+.logo-volkswagen-de {
+	background-image: url(http://beta.cliqz.com/logo/volkswagen.de.png);
+}
+.logo-w3-org {
+	background-image: url(http://beta.cliqz.com/logo/w3.org.png);
+}
+.logo-wetter-de {
+	background-image: url(http://beta.cliqz.com/logo/wetter.de.png);
+}
+.logo-wg-gesucht-de {
+	background-image: url(http://beta.cliqz.com/logo/wg-gesucht.de.png);
+}
+.logo-wordpress-org {
+	background-image: url(http://beta.cliqz.com/logo/wordpress.org.png);
+}
+.logo-wpde-org {
+	background-image: url(http://beta.cliqz.com/logo/wpde.org.png);
+}
+.logo-zoover-de {
+	background-image: url(http://beta.cliqz.com/logo/zoover.de.png);
+}
