--- a/cliqz@cliqz.com/chrome/skin/logo.css
+++ b/cliqz@cliqz.com/chrome/skin/logo.css
@@ -70,7 +70,7 @@
 .logo-amazon-com {
 	background-image: url(http://beta.cliqz.com/logo/amazon.com.png);
 }
-.logo-amazon.co-uk {
+.logo-amazon-co-uk {
 	background-image: url(http://beta.cliqz.com/logo/amazon.co.uk.png);
 }
 .logo-amazon-de {
@@ -388,7 +388,7 @@
 .logo-google-com {
 	background-image: url(http://beta.cliqz.com/logo/google.com.png);
 }
-.logo-google.co-uk {
+.logo-google-co-uk {
 	background-image: url(http://beta.cliqz.com/logo/google.co.uk.png);
 }
 .logo-google-de {
@@ -1129,7 +1129,7 @@
 .logo-battlefield-com {
 	background-image: url(http://beta.cliqz.com/logo/battlefield.com.png);
 }
-.logo-bbc.co-uk {
+.logo-bbc-co-uk {
 	background-image: url(http://beta.cliqz.com/logo/bbc.co.uk.png);
 }
 .logo-bertelsmann-de {
@@ -1177,7 +1177,7 @@
 .logo-cyberport-de {
 	background-image: url(http://beta.cliqz.com/logo/cyberport.de.png);
 }
-.logo-dailymail.co-uk {
+.logo-dailymail-co-uk {
 	background-image: url(http://beta.cliqz.com/logo/dailymail.co.uk.png);
 }
 .logo-daskochrezept-de {
@@ -1336,7 +1336,7 @@
 .logo-o2online-de {
 	background-image: url(http://beta.cliqz.com/logo/o2online.de.png);
 }
-.logo-opodo.co-uk {
+.logo-opodo-co-uk {
 	background-image: url(http://beta.cliqz.com/logo/opodo.co.uk.png);
 }
 .logo-organize-me {
