add ebay.co.uk logo

--- a/cliqz@cliqz.com/chrome/skin/logo.css
+++ b/cliqz@cliqz.com/chrome/skin/logo.css
@@ -277,6 +277,9 @@
 .logo-ebay-com {
 	background-image: url(http://beta.cliqz.com/logo/ebay.com.png);
 }
+.logo-ebay-co-uk {
+	background-image: url(http://beta.cliqz.com/logo/ebay.co.uk.png);
+}
 .logo-ebay-de {
 	background-image: url(http://beta.cliqz.com/logo/ebay.de.png);
 }
