--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -17,6 +17,13 @@
   border-color: #cccccc;
 }
 
+.autocomplete-richlistitem  * {
+  /*
+  background-color: red;
+  border: 1px solid green;
+  */
+}
+
 /*
 .autocomplete-richlistitem * {
   background-color: red;
@@ -33,7 +40,7 @@
 }
 
 .cliqz-left-separator {
-  width: 8px;
+  width: 13px;
   height: 24px;
 }
 
@@ -79,41 +86,43 @@
   /* background-color: lightgreen; */
 }
 
+/* general autocomplete item styles */
+.ac-title-box {
+  height: 24px;
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 10pt;
+  font-weight: 500;
+  padding: 10px 0 2px 0;
+}
+
 .autocomplete-richlistitem[type="favicon"] .ac-title-box, 
 .autocomplete-richlistitem[type="bookmark"] .ac-title-box,
 .autocomplete-richlistitem[type="switchtab"] .ac-title-box {
-  font-family: Verdana, Geneva, sans-serif;
-  font-size: 10pt;
-  font-weight: 400;
   color: #996699;
-  padding: 10px 0 5px 0;
 }
 
 .autocomplete-richlistitem[type="cliqz-results"] .ac-title-box,
 .autocomplete-richlistitem[type="cliqz-suggestions"] .ac-title-box {
-  font-family: Verdana, Geneva, sans-serif;
-  font-size: 10pt;
-  font-weight: 400; 
   color: #003366;
-  padding: 10px 0 5px 0;
 }
 
 .cliqz-ac-title-suggestion-desc {
-  color: #cccccc;
+  color: #999999;
   font-weight: 500;
 }
 
 .cliqz-ac-title-suggestion {
   color: #99cccc;
-  font-weight: 400;
+  font-weight: 500;
   font-style: italic;
 }
+
 
 /* source color */
 .cliqz-ac-source-icon {
   width: 5px;
   height: 62px;
-  margin-right: 17px;
+  margin-right: 12px;
   background-position:right 5px center;
   background-repeat: no-repeat;
   transition: width 0.2s;
@@ -182,13 +191,13 @@
   background-image: none;
 }
 
-/*.autocomplete-richlistitem:hover .cliqz-ac-source-icon, */
+.autocomplete-richlistitem:hover .cliqz-ac-source-icon, 
 .autocomplete-richlistitem[selected="true"] .cliqz-ac-source-icon {
   width: 28px;
   /* margin-right: 0px; */
 }
 .autocomplete-richlistitem:hover {
-  background-color: rgba(204, 204, 204, 0.3);
+  background-color: rgba(204, 204, 204, 0.2);
 }
 
 .autocomplete-richlistitem[selected="true"]:hover {
@@ -201,6 +210,7 @@
   background-repeat: no-repeat;
   background-position: left center;
   margin-top: 7px;
+  margin-left: 20px;
 }
 
 .cliqz-history {
@@ -246,7 +256,7 @@
 .cliqz-urlbar-message-search {
   font-family: Verdana, Geneva, sans-serif;
   color: white;
-  background-color: #336699;
+  background-color: #00ccff;
   margin: 1px;
   padding: 1px 5px;
   border-radius: 1px;
@@ -255,7 +265,7 @@
 .cliqz-urlbar-message-navigate {
   font-family: Verdana, Geneva, sans-serif;
   color: white;
-  background-color: #33cc99; 
+  background-color: #ff6666; 
   margin: 1px;
   padding: 1px 5px;
   border-radius: 1px;
@@ -279,16 +289,12 @@
 }
 
 .cliqz-ac-image {
-  width: 105px;
-  height: 48px;
+  width: 96px;
+  height: 54px;
   padding-left: 5px;
-  padding-top: 10px;
+  padding-top: 7px;
 }
 
-/* general autocomplete item styles */
-.ac-title-box {
-  height: 24px;
-}
 
 /* url container */
 .ac-url-box {
